tests/transpiler/x/clj/group_by_sort.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/transpiler/x/clj/group_by_sort.clj:10:84).
Unable to resolve symbol: g in this context

Full report at:
/tmp/clojure-10795143668920085908.edn
