tests/transpiler/x/clj/group_by_sort.clj
;; Generated by Mochi v0.10.32 on 2025-07-21 11:12:35 GMT+7
(ns main)

(require 'clojure.set)

(defrecord Anon1 [cat val])

(def items [{:cat "a" :val 3} {:cat "a" :val 1} {:cat "b" :val 5} {:cat "b" :val 2}])

(def grouped (for [[k rows] (group-by :key (for [i (sort-by (fn [i] (- (reduce + 0 (for [x g] (:val x))))) items) :let [k (:cat i)]] {:key k :item i})) :let [g {:key k :items (map :item rows)}]] {:cat (:key g) :total (reduce + 0 (for [x (:items g)] (:val x)))}))

(defn -main []
  (println grouped))

(-main)
